Fixed minor layout issue for event items in grid in IE8

--- a/skin/frontend/default/kapowdesign/css/custom.css
+++ b/skin/frontend/default/kapowdesign/css/custom.css
@@ -1176,7 +1176,7 @@ ul#steps {
 	background: transparent;
 	background:rgba(28,27,27,.7);
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#CC1C1B1B, endColorstr=#CC1C1B1B)";
-	height: 500px;
+	height: 525px;
 	position: relative;
 }
 .eventlist_products p.content {
